--- a/.github/workflows/image-push-master.yml
+++ b/.github/workflows/image-push-master.yml
@@ -37,13 +37,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
-        with:
-          registry: registry.cn-hangzhou.aliyuncs.com
-          username: ${{ secrets.USERNAME_ALI }}
-          password: ${{ secrets.PASSWORD_ALI }}
+      - name: Login to Docker
+        run: |
+           docker login -u inspurwyd  -p  dckr_pat_yMRt21vCZj0PlDl14xJiqSOHeVg
 
       - name: Build and push multi-arch image
         run: |
-          docker buildx build --platform=linux/amd64 --push -t registry.cn-hangzhou.aliyuncs.com/testwydimage/${{ env.IMAGE_NAME }}:latest .
+          docker buildx build --platform=linux/amd64 --push -t inspurwyd/${{ env.IMAGE_NAME }}:latest .
